Name:          monad-image
Build-type:    Simple
Version:       0.1
Cabal-Version: >= 1.6
Synopsis:      Image stuff.
Description:   Image stuff.
License:       OtherLicense
License-file:  LICENSE
Category:      Control, Data, Monads
Author:        Geoff Hulette
Maintainer:    Geoff Hulette <ghulette@gmail.com>
Stability:     experimental
Tested-With:   GHC == 7.4.1

Library
  Exposed-modules: Image
  Hs-Source-Dirs:  src
  Build-Depends:   base >= 4 && < 5,mtl >= 2,vector,array >= 0.4
  GHC-Options:     -Wall

Source-Repository head
  type:     git
  location: git://github.com/ghulette/monad-image.git
